[package]
name = "color_preprocessor"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe  = { version = "0.28", features = ["default"] }
egui    = "0.28"
image   = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff", "bmp"] }
rayon   = "1.10"
rfd     = "0.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
